hw06/test/zm-hw6-not-a-class-classVarExp.fmj
public int main() { 
    class C0 c;
    int a;
    int b;
    b = a.id; // error
    return 0;
}

public class C0 {
    int id;

    public int func(int a, int b, int c){
        return 0;
    }
}